<resources>
    <string name="app_name">حالا</string>
    <string name="navigation_drawer_open" translatable="false">Alriad gadah bank</string>
    <string name="navigation_drawer_close" translatable="false">a</string>
    <string name="getting_locations">Gitting location...</string>
    <string name="time_just_now">just now</string>
    <string name="time_a_minute">a minute</string>
    <string name="time_minutes">minutes</string>
    <string name="time_an_hour">an hour</string>
    <string name="time_hours">hours</string>
    <string name="time_yasterday">yesterday</string>
    <string name="time_days">days</string>
    <string name="current_trip">Current Trip</string>
    <string name="nearby_places">Nearby places</string>
    <string name="chats">Chats</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="share">Share</string>
    <string name="no_places">No places</string>
    <string name="next">Next</string>
    <string name="choose_another_place">Choose another place not your location</string>
    <string name="cost">Cost</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="egypt">Egypt</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="my_location">My location</string>
    <string name="send_order">Send Order</string>
    <string name="login">LogIn</string>
    <string name="new_account">New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="sample_mail_id">name@example.com</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="password_txt">******</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection.</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="server_down">Unable to reach server.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="email_validation">Enter your email ID.</string>
    <string name="not_valid_email">Not a valid email ID.</string>
    <string name="password_validation">Password could not be left empty.</string>
    <string name="first_name_empty">First name required.</string>
    <string name="last_name_empty">Last name required.</string>
    <string name="mobile_number_empty">Mobile number required.</string>
    <string name="first_name_no_number">Name Not match</string>
    <string name="check_email_or_password">check email and password</string>
    <string name="enter_your_email_to_reset">Enter your email to reset</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_place">  Enter Place</string>
    <string name="button_ok">Settings</string>
    <string name="g_p_s">GPS</string>
    <string name="open_gps">Please Open GPS</string>
    <string name="receiver_place_my_location">Receiver place (my resultLocation)</string>
    <string name="order_details">Order Details</string>
    <string name="notes">Notes</string>
    <string name="arrival_area">Arrival Area</string>
    <string name="receiver_place">receiver place</string>
    <string name="get_location_permistion">Gimme the permission!</string>
    <string name="gps_message">Would you mind to turn GPS on with high accuracy mode?</string>

    <string name="write_message">Write message</string>
    <string name="current_order">Current order</string>

    <string name="purchase_order">Purchase order</string>
    <string name="order_detail_2">\n to </string>
    <string name="order_detail_3">\n total distance </string>
    <string name="order_detail_4"> km </string>
    <string name="order_detail_5">\n cost of km </string>
    <string name="order_detail_6"> SR </string>
    <string name="trip_order">Trip</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="k_m">km</string>
    <string name="omla">SR</string>
    <string name="details">Details</string>
    <string name="current_order_details">Details:</string>
    <string name="current_order_notes">Notes:</string>
    <string name="drivers">Drivers</string>
    <string name="purchases">Purchases</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="no_drivers_accept_the_order_yet">No drivers accept the order yet</string>
    <string name="order_cost">Order Cost :</string>
    <string name="arrival_distance">Arrival distance:</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="create_order">Create Order</string>
    <string name="choose_place_text">Pleas choose place to make order</string>
    <string name="accept_offer_message">Hi i accept your offer</string>

    <string name="cost_of_purchases">Cost of purchases: </string>
    <string name="delivery_cost">Delivery cost: </string>
    <string name="total_cost">Total cost: </string>
    <string name="sr">SR</string>
    <string name="receiver_location">Receiver Location</string>
    <string name="cancel_the_order">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">If you return, the order will be deleted</string>
    <string name="delete_order">Delete The order</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="profile_picture">Profile image</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_required">Profile Image required</string>
    <string name="communicate">Communicate</string>
    <string name="finish_order">Finish Order</string>
    <string name="Rate">Rate</string>
    <string name="please_rate_me">Pleas Rate Me</string>
    <string name="rate">Rate</string>
    <string name="no_user">No users with this email</string>
    <string name="getting_location">Getting resultLocation...</string>
    <string name="string_logo">Places</string>
    <string name="search">Search</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_cost">Trip Cost :</string>
    <string name="do_finish_order">Do you want to  finish th order</string>
    <string name="new_order">New Order</string>
    <string name="charge_balance">Please recharge the balance</string>
    <string name="finish">Finish</string>
    <string name="order_refused">Order refused</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="direction_to_client_location">Driection to the client</string>
    <string name="direction_to_arrival">Direction to Arrival</string>
    <string name="back_to_main">back to main</string>
    <string name="city">City</string>
    <string name="national_id">National id</string>
    <string name="car_id">Car id</string>
    <string name="car_color">Car color</string>
    <string name="car_model">Car model</string>
    <string name="car_form_picture">Car form</string>
    <string name="car_licence_picture">Car licence</string>
    <string name="picture_for_the_car_from_the_front">Front car Picture</string>
    <string name="picture_of_the_back_of_the_car">Car back Front</string>
    <string name="city_required">City is required</string>

    <string name="national_id_required">National ID required</string>
    <string name="car_Id_required">Car Id required</string>
    <string name="car_color_required">car color required</string>
    <string name="create_new_account">Create new account</string>
    <string name="car_model_required">Car model required</string>
    <string name="car_form_required">Picture for car form is required;</string>
    <string name="front_car_pic_required">Picture for the back of the car is required</string>
    <string name="license_pic_required">Car licence picture is required</string>
    <string name="back_car_required">back car picture required</string>
    <string name="profile_image_required">Profile Image required</string>
    <string name="no_internet_connection">No internetConnection</string>
    <string name="old_orders">Finished Orders</string>
    <string name="balance">Balance</string>
    <string name="login_as_driver">Login as driver</string>
    <string name="no_dirver">No drivers with this email</string>
    <string name="arabic">arabic</string>
    <string name="receipt">Receipt</string>
    <string name="sent">Sent</string>
    <string name="send_receipt">Send receipt</string>
    <string name="send_img">Send image</string>
    <string name="purchases_cost_in_sr">Purchases Cost</string>
    <string name="receipt_picture">Receipt Picture</string>
    <string name="delivery_cost_in_sr">Delivery Cost</string>
    <string name="more">More</string>
    <string name="my_account">My account</string>
    <string name="my_orders">My Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="finished_orders">Finished orders</string>
    <string name="canceled_order">Canceled orders</string>
    <string name="contacts">Contacts</string>
    <string name="instagram_account">Instagram account</string>
    <string name="snapchat_account">SnapChat account</string>
    <string name="twitter_account">Twitter account</string>
    <string name="facebook_account">Facebook account</string>
    <string name="Bank_accounts">Bank accounts</string>
    <string name="services_account">Services account</string>
    <string name="account_iban">Account IBAN</string>
    <string name="saudi_arabia_bank">Saudi arabia bank</string>
    <string name="account_number">Account number</string>
    <string name="saudi_bank">Sudia bank</string>
    <string name="alriad_bank">Alriad bank</string>
    <string name="alriad_gada_bank">alriad_gada_bank</string>
    <string name="alriad__gada_bank">Alriad gadah bank</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="send_complain">Send complaint</string>
    <string name="payment">Payment</string>
    <string name="privacy">Privacy</string>
    <string name="info">About</string>
    <string name="help">Help</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="please_sign_in_first">Please sign in first</string>


</resources>
