<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_grey"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/chats" />

        <item android:id="@+id/nav_old_orders"
            android:icon="@drawable/ic_cart"
            android:title="@string/old_orders"/>

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_more"
            android:title="@string/more" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>

</menu>
