<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/nearby_places" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/chats" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
        <item
            android:id="@+id/nav_login_as_driver"
            android:icon="@drawable/ic_drive_eta_black_24dp"
            android:title="@string/login_as_driver" />

    </group>

</menu>
